refactor: using path to include id not request body when delete
