# backend/application/generated/src/models.rs
@@ -8,6 +8,14 @@ use crate::header;
 use crate::{models, types::*};
 
       
+    #[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize, validator::Validate)]
+    #[cfg_attr(feature = "conversion", derive(frunk::LabelledGeneric))] 
+    pub struct DeleteIdDeletePathParams {
+            /// Vocabulary ID
+                pub id: i32,
+    }
+
+
       
       
       
@@ -258,130 +266,6 @@ impl std::convert::TryFrom<HeaderValue> for header::IntoHeaderValue<DeleteVocabu
                         std::result::Result::Ok(value) => std::result::Result::Ok(header::IntoHeaderValue(value)),
                         std::result::Result::Err(err) => std::result::Result::Err(
                             format!("Unable to convert header value '{}' into DeleteVocabularyOkResponse - {}",
-                                value, err))
-                    }
-             },
-             std::result::Result::Err(e) => std::result::Result::Err(
-                 format!("Unable to convert header: {:?} to string: {}",
-                     hdr_value, e))
-        }
-    }
-}
-
-
-
-
-
-
-
-#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize, validator::Validate)]
-#[cfg_attr(feature = "conversion", derive(frunk::LabelledGeneric))]
-pub struct DeleteVocabularyRequestBody {
-    #[serde(rename = "id")]
-    pub id: i32,
-
-}
-
-
-impl DeleteVocabularyRequestBody {
-    #[allow(clippy::new_without_default, clippy::too_many_arguments)]
-    pub fn new(id: i32, ) -> DeleteVocabularyRequestBody {
-        DeleteVocabularyRequestBody {
-            id,
-        }
-    }
-}
-
-/// Converts the DeleteVocabularyRequestBody value to the Query Parameters representation (style=form, explode=false)
-/// specified in https://swagger.io/docs/specification/serialization/
-/// Should be implemented in a serde serializer
-impl std::string::ToString for DeleteVocabularyRequestBody {
-    fn to_string(&self) -> String {
-        let params: Vec<Option<String>> = vec![
-
-            Some("id".to_string()),
-            Some(self.id.to_string()),
-
-        ];
-
-        params.into_iter().flatten().collect::<Vec<_>>().join(",")
-    }
-}
-
-/// Converts Query Parameters representation (style=form, explode=false) to a DeleteVocabularyRequestBody value
-/// as specified in https://swagger.io/docs/specification/serialization/
-/// Should be implemented in a serde deserializer
-impl std::str::FromStr for DeleteVocabularyRequestBody {
-    type Err = String;
-
-    fn from_str(s: &str) -> std::result::Result<Self, Self::Err> {
-        /// An intermediate representation of the struct to use for parsing.
-        #[derive(Default)]
-        #[allow(dead_code)]
-        struct IntermediateRep {
-            pub id: Vec<i32>,
-        }
-
-        let mut intermediate_rep = IntermediateRep::default();
-
-        // Parse into intermediate representation
-        let mut string_iter = s.split(',');
-        let mut key_result = string_iter.next();
-
-        while key_result.is_some() {
-            let val = match string_iter.next() {
-                Some(x) => x,
-                None => return std::result::Result::Err("Missing value while parsing DeleteVocabularyRequestBody".to_string())
-            };
-
-            if let Some(key) = key_result {
-                #[allow(clippy::match_single_binding)]
-                match key {
-                    #[allow(clippy::redundant_clone)]
-                    "id" => intermediate_rep.id.push(<i32 as std::str::FromStr>::from_str(val).map_err(|x| x.to_string())?),
-                    _ => return std::result::Result::Err("Unexpected key while parsing DeleteVocabularyRequestBody".to_string())
-                }
-            }
-
-            // Get the next key
-            key_result = string_iter.next();
-        }
-
-        // Use the intermediate representation to return the struct
-        std::result::Result::Ok(DeleteVocabularyRequestBody {
-            id: intermediate_rep.id.into_iter().next().ok_or_else(|| "id missing in DeleteVocabularyRequestBody".to_string())?,
-        })
-    }
-}
-
-// Methods for converting between header::IntoHeaderValue<DeleteVocabularyRequestBody> and HeaderValue
-
-#[cfg(feature = "server")]
-impl std::convert::TryFrom<header::IntoHeaderValue<DeleteVocabularyRequestBody>> for HeaderValue {
-    type Error = String;
-
-    fn try_from(hdr_value: header::IntoHeaderValue<DeleteVocabularyRequestBody>) -> std::result::Result<Self, Self::Error> {
-        let hdr_value = hdr_value.to_string();
-        match HeaderValue::from_str(&hdr_value) {
-             std::result::Result::Ok(value) => std::result::Result::Ok(value),
-             std::result::Result::Err(e) => std::result::Result::Err(
-                 format!("Invalid header value for DeleteVocabularyRequestBody - value: {} is invalid {}",
-                     hdr_value, e))
-        }
-    }
-}
-
-#[cfg(feature = "server")]
-impl std::convert::TryFrom<HeaderValue> for header::IntoHeaderValue<DeleteVocabularyRequestBody> {
-    type Error = String;
-
-    fn try_from(hdr_value: HeaderValue) -> std::result::Result<Self, Self::Error> {
-        match hdr_value.to_str() {
-             std::result::Result::Ok(value) => {
-                    match <DeleteVocabularyRequestBody as std::str::FromStr>::from_str(value) {
-                        std::result::Result::Ok(value) => std::result::Result::Ok(header::IntoHeaderValue(value)),
-                        std::result::Result::Err(err) => std::result::Result::Err(
-                            format!("Unable to convert header value '{}' into DeleteVocabularyRequestBody - {}",
                                 value, err))
                     }
              },
