# openapi.yml
@@ -71,15 +71,16 @@ paths:
           $ref: "#/components/responses/BadRequest"
         "500":
           $ref: "#/components/responses/InternalServerError"
-  /delete:
+  /delete/{id}:
     delete:
       description: "Delete vocabulary"
-      requestBody:
-        description: "vocabulary"
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/DeleteVocabularyRequestBody"
+      parameters:
+        - name: id
+          in: path
+          description: "Vocabulary ID"
+          required: true
+          schema:
+            type: integer
       responses:
         "200":
           description: "ok response"
@@ -227,12 +228,6 @@ components:
           type: string
       required:
         - message
-    DeleteVocabularyRequestBody:
-      properties:
-        id:
-          type: integer
-      required:
-        - id
     DeleteVocabularyOkResponse:
       properties:
         message:
